--- a/styleguide/scss/custom/_layout-header.scss
+++ b/styleguide/scss/custom/_layout-header.scss
@@ -60,6 +60,8 @@ body {
                             color: sf-get-color(slate);
                             font-family: $font-logo;
 
+                            justify-content: flex-start;
+
                             font-size: 3.5rem;
                             line-height: 0.85;
 
