--- a/styleguide/scss/core/_core-forms.scss
+++ b/styleguide/scss/core/_core-forms.scss
@@ -328,6 +328,7 @@ form, [role="form"] {
                     width: 1rem;
                     height: 1rem;
                     margin-right: 0.5rem;
+                    top: 0.05rem;
 
                     font-size: 1rem;
                     line-height: 1;
