--- a/styleguide/scss/core/_core-typography.scss
+++ b/styleguide/scss/core/_core-typography.scss
@@ -36,6 +36,11 @@ h1, h2, h3, h4, h5, h6 {
         margin-top: 3rem;
     }
 
+    &:first-child {
+
+        margin-top: 0;
+    }
+
     &:last-child {
 
         margin-bottom: 0;
