Removed old sizers, refactored media query wrapper

--- a/styleguide/scss/_manifest.scss
+++ b/styleguide/scss/_manifest.scss
@@ -24,3 +24,6 @@
 @import "core/core-lists-and-tables";
 @import "core/core-typography";
 @import "core/core-media";
+
+// CORE LAYOUT; DO NOT EDIT
+@import "core/core-layout";
