--- a/styleguide/scss/core/_core-buttons.scss
+++ b/styleguide/scss/core/_core-buttons.scss
@@ -21,7 +21,8 @@ button, input[type="button"], input[type="submit"], input[type="cancel"], a[role
     top: -1px;
     margin: 0;
     border: 0;
-    @include sf-padding-horizontal(1rem);
+    padding-left: 1rem;
+    padding-right: 1rem;
     text-align: center;
     text-decoration: none;
     vertical-align: middle;
