--- a/styleguide/scss/core/_core-layout.scss
+++ b/styleguide/scss/core/_core-layout.scss
@@ -1,33 +1,12 @@
 //-----------------------------------------------------------------------//
-// $LAYOUT-DEFAULTS
+// $LAYOUT
+// Mixins, functions, and styles for working with units and grids.
 //-----------------------------------------------------------------------//
 
-html, body {
 
-    // Needed for mobile
-    overflow-x: hidden;
-    max-width: 100vw;
-
-    @include sf-set-color-scheme(graylightest);
-}
-
-body {
-
-    // Needed for mobile
-    position: relative;
-
-    //------------------------------------//
-    //  PRIMARY SITE WRAPPER
-    //------------------------------------//
-    header, main, footer {
-
-        max-width: $elastic-breakpoint;
-        margin-left: auto;
-        margin-right: auto;
-
-        @include sf-set-color-scheme(default);
-    }
-}
+//-----------------------------------------------------------------------//
+// MIXINS AND FUNCTIONS
+//-----------------------------------------------------------------------//
 
 /* GRID DEFAULTS
 
@@ -99,6 +78,42 @@ body {
     &[sf-centered] {
 
         @include sf-make-centered-grid();
+    }
+}
+
+
+//-----------------------------------------------------------------------//
+// STYLES
+//-----------------------------------------------------------------------//
+
+html, body {
+
+    // Needed for mobile
+    overflow-x: hidden;
+    max-width: 100vw;
+
+    @include sf-set-color-scheme(graylightest);
+}
+
+body {
+
+    // Needed for mobile
+    position: relative;
+
+    //------------------------------------//
+    //  PRIMARY SITE WRAPPER
+    //------------------------------------//
+    header, main, footer {
+
+        @if (map-get($media-breakpoints, elastic) != false) {
+
+            max-width: $elastic-breakpoint;
+        }
+
+        margin-left: auto;
+        margin-right: auto;
+
+        @include sf-set-color-scheme(default);
     }
 }
 
@@ -291,7 +306,11 @@ main {
 
             margin-left: auto;
             margin-right: auto;
-            max-width: $elastic-breakpoint;
+
+            @if (map-get($media-breakpoints, elastic) != false) {
+
+                max-width: $elastic-breakpoint;
+            }
 
             @include set-horizontal-unit-padding();
 
