--- a/styleguide/scss/core/_core-media.scss
+++ b/styleguide/scss/core/_core-media.scss
@@ -76,7 +76,8 @@ object[type="image/svg+xml"] {
 
     @include sf-media($upto: tablet-portrait) {
 
-        @include sf-margin-horizontal($horizontal-unit-padding * -1);
+        margin-left: $horizontal-unit-padding * -1;
+        margin-right: $horizontal-unit-padding * -1;
 
         img {
             max-width: 100vw;
@@ -104,7 +105,8 @@ object[type="image/svg+xml"] {
 
     @include sf-media($upto: tablet-portrait) {
 
-        @include sf-margin-horizontal($horizontal-unit-padding * -1);
+        margin-left: $horizontal-unit-padding * -1;
+        margin-right: $horizontal-unit-padding * -1;
     }
 
     [role="video"], video, .video-container {
